--- a/3.Layout en una dimensión/Ejercicio propiedades flexbox/css/flexbox.css
+++ b/3.Layout en una dimensión/Ejercicio propiedades flexbox/css/flexbox.css
@@ -1,11 +1,26 @@
+body {
+  background: linear-gradient(38deg, #000428, #004e92);
+  box-sizing: border-box;
+
+}
 .contenedor {
+  min-height: 100vh;
+  margin: 2em;
   padding: 4em 2em;
+  border: 3px solid rgb(228, 66, 66);
+  display: flex;
+  flex-direction: row;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: flex-end;
+  
 }
 
 .explorador {
   background-color: rgba(250, 250, 250, 0.8);
-  margin: 1em;
-  padding: 2em;
+  margin: .5em;
+  padding: 1em;
   border-radius: 10px;
   text-align: center;
   color: #004e92;
@@ -13,8 +28,15 @@
   font-style: italic;
   font-size: 1.2em;
   line-height: 1.4;
+  
 }
 
-body {
-  background: linear-gradient(38deg, #000428, #004e92);
+
+.exp1 {
+  /* align-self: center; */
+  align-self: stretch;
+  
+}
+.exp2 {
+  align-self: center;
 }
